--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       crossorigin="anonymous"
     />
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-    <title>React App</title>
+    <title>Benny Thai's Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
